.kube/codefestx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: codefestx
  labels:
    app: codefestx
spec:
  selector:
    matchLabels:
      app: codefestx
  replicas: 1
  template:
    metadata:
      labels:
        app: codefestx
    spec:
      containers:
      - name: nginx-front
        image: "gcr.io/rndcloud-codefest-wrike-tech/codefestx"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 5
          failureThreshold: 6
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "curl -s https://api.codefest.wrike.tech/events/request-reload"]
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
