.kube/dartup-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dartup
  labels:
    app: dartup
spec:
  selector:
    matchLabels:
      app: dartup
  replicas: 1
  template:
    metadata:
      labels:
        app: dartup
    spec:
      containers:
      - name: nginx-front
        image: "gcr.io/rndcloud-codefest-wrike-tech/dartup"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
