.kube/kickoff-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kickoff
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: kickoff
  type: ClusterIP
