.kube/nginx-wrike-border-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codefest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - secretName: codefest-tls
    hosts:
    - "codefest.wrike.tech"
    - "kickoff.wrike.tech"
    - "dartup.wrike.tech"
  rules:
  - host: "codefest.wrike.tech"
    http:
      paths:
      - path: /
        backend:
          serviceName: codefestx
          servicePort: 80
  - host: "kickoff.wrike.tech"
    http:
      paths:
        - path: /
          backend:
            serviceName: kickoff
            servicePort: 80
  - host: "dartup.wrike.tech"
    http:
      paths:
        - path: /
          backend:
            serviceName: dartup
            servicePort: 80
